--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm run build && node server.js",
+    "build": "browserify public/home.js -o public/bundle.js"
   },
   "keywords": [],
   "author": "",
